try 1 to solve error on safari

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -216,3 +216,8 @@ body {
     height: 50px;
     
 }
+
+/*Workarround for streching images on Safari*/
+.d-flex > img{
+    align-self: flex-start;
+}
